--- a/gb/20/2/9/n11856571.md
+++ b/gb/20/2/9/n11856571.md
@@ -1,21 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kmtpx253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/kmtpx253/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kmtpx253/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>受疫情冲击 中国1季度GDP或降2.5百分比</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>受疫情冲击 中国1季度GDP或降2.5百分点</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/GettyImages-1198879006-1-600x400.jpg" />
-<h6>武汉肺炎，严重冲击中国经济。图为武汉展览中心改为的方舱医院。目前仍有大量病患表示医院不收治，生命垂危。(STR/AFP via Getty Images)
+<h6>武汉展览中心改为的方舱医院。(STR/AFP via Getty Images)
 </h6>
 <hr>
-<p>【大纪元2020年02月10日讯】（大纪元记者骆亚、张顿采访报导）<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md">武汉肺炎</a>疫情迅速蔓延，重创<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E.md">中国经济</a>。中国经济学家<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E5%B7%A9%E8%83%9C%E5%88%A9.md">巩胜利</a>认为，短期内估计，疫情会让GDP降低至少2.5个百分比，每延长一个月再降低一个百分点。</p>
-<h2><strong>首季度GDP可能是<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/70%E5%B9%B4%E6%9D%A5%E7%9A%84%E6%9C%80%E4%BD%8E%E7%82%B9.md">70年来的最低点</a></strong></h2>
-<p><a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E5%B7%A9%E8%83%9C%E5%88%A9.md">巩胜利</a>2月9日接受大纪元记者采访时做出上述表述。从官方数据，他表示，现在已有数万人感染了<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md">武汉肺炎</a>，而且每天确诊病例以数千的速度增长，现在都不知道什么时间能到顶点，疫情会持续到6月结束还是到9月结束，直接关系到这场防疫战对经济的重大影响。</p>
+<p>【大纪元2020年02月10日讯】（大纪元记者骆亚、张顿采访报导）<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>疫情迅速蔓延，重创<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E.md#1">中国经济</a>。中国经济学家<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%B7%A9%E8%83%9C%E5%88%A9.md#1">巩胜利</a>认为，短期内估计，疫情会让GDP降低至少2.5个百分比，每延长一个月再降低一个百分点。</p>
+<h2><strong>首季度GDP可能是<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/70%E5%B9%B4%E6%9D%A5%E7%9A%84%E6%9C%80%E4%BD%8E%E7%82%B9.md#1">70年来的最低点</a></strong></h2>
+<p><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%B7%A9%E8%83%9C%E5%88%A9.md#1">巩胜利</a>2月9日接受大纪元记者采访时做出上述表述。从官方数据，他表示，现在已有数万人感染了<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>，而且每天确诊病例以数千的速度增长，现在都不知道什么时间能到顶点，疫情会持续到6月结束还是到9月结束，直接关系到这场防疫战对经济的重大影响。</p>
 <p>他表示，本次疫情是在中国新年期间爆发，新年期间的经济是中国人民消费的最高点，历史以来都是这样。因为新年期间的产业链，包括交通、工业、消费、餐饮、旅游业，这些都受到重创。</p>
 <p>摩根大通（JPMorgan Chase）驻纽约经济学家此前预计，疫情会让中国GDP下降5个百分点以上，并将中国第一季度经济增长预期下调至1％。</p>
 <p>中共官方通报的数据说，中国去年GDP增速为6.1%。</p>
 <p>武汉疫情去年12月初爆发，但中共从地方到中央都一直隐瞒疫情，抓捕传播疫情的医护人员及网民，同时宣称疫情“可防可控”，没有“人传人”等虚假消息，致使疫情迅速蔓延。</p>
 <p>巩胜利表示，疫情爆发后，中国就一个声音，其它的声音都出不来。如果当初就明确地说“人传人”，疫情还会向全国传播吗，500万人还会离开武汉吗，疫情会在全球爆发吗。“所以这是个深刻的历史教训。”</p>
 <p>“如果不是当初错了，告知人传人的现象，就把武汉的人口像现在封城一样，把他们封在那里，就不会让中国人这个年过不了。”</p>
-<p>巩胜利说：“2020开年的第一季度，可能是<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E.md">中国经济</a><a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/70%E5%B9%B4%E6%9D%A5%E7%9A%84%E6%9C%80%E4%BD%8E%E7%82%B9.md">70年来的最低点</a>。”</p>
+<p>巩胜利说：“2020开年的第一季度，可能是<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E.md#1">中国经济</a><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/70%E5%B9%B4%E6%9D%A5%E7%9A%84%E6%9C%80%E4%BD%8E%E7%82%B9.md#1">70年来的最低点</a>。”</p>
 <h2><strong>疫情也影响全球经济</strong></h2>
 <p>巩胜利表示，这一次疫情，可能是人类百年以来最罕见的，又影响这么多人口，现在全世界人口仅有77多亿人，而中国就有14亿人，如果中国一关门，结果把这个国家和全人类的银行都中断了，你想想看这对世界经济影响肯定很大，尽管说中国经济不过是第二大经济体。</p>
 <p>1月23日开始，中共先后封锁了武汉在内的65座城市，湖北、辽宁、江西3省进入全省封闭管理，但疫情仍在不断全国蔓延。同时传到了美国、英国、法国、加拿大、德国、意大利、瑞典、澳大利亚、西班牙、韩国、日本等20多个国家和地区。</p>
@@ -32,39 +32,43 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/9/n11856571.htm">受疫情冲击 中国1季度GDP或降2.5百分比</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/5/n11846450.htm">经济学家：中国经济恐陷入“技术性衰退”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11827182.htm">武汉肺炎持续扩散 中国经济雪上加霜</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11827151.htm">中国经济疲弱 企业裁员花样百出</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11819799.htm">专家：武汉肺炎对中国经济冲击甚于贸易战</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11819456.htm">国际评级机构：武汉肺炎将冲击中国经济</a></li>
-> <li><a href="https://github.com/kmtpx253/djy/blob/master/gb/20/2/2/n11839723.md">武汉肺炎摧毁中国经济 损失将超过16万亿</a></li>
-> <li><a href="https://github.com/kmtpx253/djy/blob/master/gb/20/1/28/n11827349.md">外媒：武汉肺炎冲击中国经济 曝露弱点</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎死亡惊人 武汉日烧百具死尸</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11854482.htm">武汉笼罩阴霾 英媒曝焚烧感染者尸体所致</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852540.htm">政治局常委会要求落空 新医学专家否定老专家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11855017.htm">武汉火神山医院内部爆料：每天死亡数百人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849036.htm">【历史上的瘟疫】被瘟疫摧毁的强大雅典</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/29/n11828782.htm">250岁的隐士 娓娓道出前朝旧事</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/30/n11833429.htm">乌鸦满天飞 预兆什么灾？如何消解？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/1/n11836330.htm">孝女感动神仙  孝心精诚穿越时空得护祐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852868.htm">李文亮去世 中共舆情分析报告网络曝光</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11851944.htm">陈秋实武汉失联 疑遭强制隔离 母亲求救</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11850310.htm">【疫情最前线】武汉实验室抢专利不慎泄密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852119.htm">【老外看香港】武汉肺炎 香港危急</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11856378.htm">【热点互动】专家：新冠病毒很可能实验室产生</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849749.htm">【热点互动】武汉新冠病毒的来源到底是什么？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852148.htm">悼预警武汉肺炎医生 章子怡怒斥警方“耻辱”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849645.htm">痛斥林郑限制佩戴口罩 关淑怡：施政似武则天</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852799.htm">小区现新冠病毒患者 陈浩明一家六口宅在家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852560.htm">被疑撑香港医护罢工 郭富城声明账号被盗用</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11850031.htm">儿子滑雪意外受伤 袁咏仪：这个年过得不容易</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/5/n11846450.md#1">经济学家：中国经济恐陷入“技术性衰退”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/28/n11827182.md#1">武汉肺炎持续扩散 中国经济雪上加霜</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/28/n11827151.md#1">中国经济疲弱 企业裁员花样百出</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/25/n11819799.md#1">专家：武汉肺炎对中国经济冲击甚于贸易战</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/25/n11819456.md#1">国际评级机构：武汉肺炎将冲击中国经济</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kmtpx253/djy/blob/master/gb/20/2/9/n11856571.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kmtpx253/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kmtpx253/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kmtpx253/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/18/n10570999.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（中）</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/1/8/n4337245.md#1" target="_blank">欧阳非：中共法官们的荒唐言论（1）</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/9/n11856571.htm">受疫情冲击 中国1季度GDP或降2.5百分点</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/2/9/n11856571.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
